# lamiglowka

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
scripts/: install-glog.sh
src/: CMakeLists.txt  main.cc
src/core/: CMakeLists.txt  signal.h  slot.h
test/: CMakeLists.txt  slot_test.cc
